fix bug 39373. make xpconnect calls into JS within a request for safety. a,r=brendan@mozilla.org